fix font awesome icon stacked alignment

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -479,11 +479,7 @@ section h3.section-subheading {
 }
 
 i.fa.fa-building.fa-stack-1x.fa-inverse {
-    margin-left: 1px;
-}
-
-i.fa.fa-building.fa-stack-1x.fa-inverse {
-    margin-left: 1px;
+    margin-left: 2px;
 }
 
 i.fa.fa-desktop.fa-stack-1x.fa-inverse {
